--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,7 +25,8 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: miketallroth/croogo-docker
+          images: miketallroth/croogo-demo
+          tags: type=semver,pattern={{version}}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -40,4 +41,3 @@ jobs:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          labels: miketallroth/croogo-demo
